# AoC2020

./: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs  testing.rs
