[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Attila <attila@kageru.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
rayon = "1.5.0"
text_io = "0.1.8"
regex = "1.4.2"
lazy_static = "1.4.0"